# lazy-eng-study-codex

./: .gitignore  LICENSE  README.md  install.ps1  install.sh  pyproject.toml
.agents/plugins/: marketplace.json
plugins/codex-kor-to-eng/: after-install.md
plugins/codex-kor-to-eng/.codex-plugin/: plugin.json
plugins/codex-kor-to-eng/hooks/: hooks.json
plugins/codex-kor-to-eng/scripts/: bootstrap.ps1  bootstrap.sh  codex_bin_discovery.py  codex_config.py  configure_codex_bin.py  configure_model.ps1  hook_output.py  hook_types.py  install.ps1  install.sh  install_plugin.py  kor_to_eng_hook.py  kortoeng_control.py  plugin_settings.py  portable_python.ps1
plugins/codex-kor-to-eng/skills/gram/: SKILL.md
plugins/codex-kor-to-eng/skills/kor-to-eng/: SKILL.md
plugins/codex-kor-to-eng/skills/kortoeng/: SKILL.md
plugins/codex-kor-to-eng/skills/kortoeng-bin/: SKILL.md
plugins/codex-kor-to-eng/skills/kortoeng-model/: SKILL.md
plugins/codex-kor-to-eng/skills/kortoeng-off/: SKILL.md
plugins/codex-kor-to-eng/skills/kortoeng-on/: SKILL.md
plugins/lazy-eng-study-codex/: after-install.md
plugins/lazy-eng-study-codex/.codex-plugin/: plugin.json
plugins/lazy-eng-study-codex/hooks/: hooks.json
plugins/lazy-eng-study-codex/scripts/: bootstrap.sh  codex_bin_discovery.py  codex_child_home.py  codex_config.py  configure_model.ps1  hook_output.py  hook_trust.py  hook_types.py  install.ps1  install.sh  install_errors.py  install_plugin.py  kor_to_eng_hook.py  kortoeng_control.py  plugin_settings.py  portable_python.ps1  prompt_rewrite.py
plugins/lazy-eng-study-codex/skills/gram/: SKILL.md
plugins/lazy-eng-study-codex/skills/kor/: SKILL.md
plugins/lazy-eng-study-codex/skills/kor-to-eng/: SKILL.md
plugins/lazy-eng-study-codex/skills/kortoeng/: SKILL.md
plugins/lazy-eng-study-codex/skills/kortoeng-bin/: SKILL.md
plugins/lazy-eng-study-codex/skills/kortoeng-model/: SKILL.md
plugins/lazy-eng-study-codex/skills/kortoeng-off/: SKILL.md
plugins/lazy-eng-study-codex/skills/kortoeng-on/: SKILL.md
tests/: test_bootstrap_install.py  test_codex_bin_discovery.py  test_codex_child_home.py  test_codex_translator.py  test_gram_hook.py  test_install_plugin.py  test_install_plugin_migration.py  test_kor_to_eng_hook.py  test_kortoeng_control.py  test_python_compatibility.py
tests/fixtures/: fake_translator.py
