[project]
name = "lazy-eng-study-codex"
version = "0.1.0"
description = "Codex plugin for lazy English study through Korean translation and English correction."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.basedpyright]
typeCheckingMode = "all"
pythonVersion = "3.11"
include = ["plugins/lazy-eng-study-codex/scripts", "tests"]
extraPaths = ["plugins/lazy-eng-study-codex/scripts"]
reportAny = "none"
reportUnknownVariableType = "none"
reportUnnecessaryComparison = "none"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["plugins", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812",
  "D",
  "S101",
]

[tool.ruff.lint.per-file-ignores]
"plugins/lazy-eng-study-codex/scripts/kor_to_eng_hook.py" = [
  "FLY002",
  "PLR0911",
  "S602",
  "S603",
  "TC003",
]
"plugins/lazy-eng-study-codex/scripts/codex_bin_discovery.py" = [
  "TC003",
]
"plugins/lazy-eng-study-codex/scripts/kortoeng_control.py" = [
  "PLR0911",
  "TC002",
  "TC003",
]
"plugins/lazy-eng-study-codex/scripts/plugin_settings.py" = [
  "EM101",
  "EM102",
  "TC003",
  "TRY003",
]
"tests/**/*.py" = [
  "E402",
  "EM101",
  "EM102",
  "PLR2004",
  "PT009",
  "SLF001",
  "TC002",
  "TC003",
  "TRY003",
  "TRY004",
]
